// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syntaxes are allowed in the chapter they are introduced 1`] = `
"
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 2`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 3`] = `undefined`;

exports[`Syntaxes are allowed in the chapter they are introduced 4`] = `
"
    function name(a, b) {
      const sum = a + b;
      if (sum > 1) {
        return sum;
      } else {
        if (a % 2 === 0) {
          return -1;
        } else if (b % 2 === 0) {
          return 1;
        } else {
          return a > b ? 0 : -2;
        }
      }
    }
    name(1, 2);
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 5`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 6`] = `3`;

exports[`Syntaxes are allowed in the chapter they are introduced 7`] = `
"
    (() => true)();
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 8`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 9`] = `true`;

exports[`Syntaxes are allowed in the chapter they are introduced 10`] = `
"
    ((x, y) => { return x + y; })(1, 2);
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 11`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 12`] = `3`;

exports[`Syntaxes are allowed in the chapter they are introduced 13`] = `
"
    true;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 14`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 15`] = `true`;

exports[`Syntaxes are allowed in the chapter they are introduced 16`] = `
"
    false;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 17`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 18`] = `false`;

exports[`Syntaxes are allowed in the chapter they are introduced 19`] = `
"
    'a string \\"\\" \\\\'\\\\'';
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 20`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 21`] = `"a string \\"\\" ''"`;

exports[`Syntaxes are allowed in the chapter they are introduced 22`] = `
"
    31.4 + (-3.14e10) * -1 % 2 / 1.5;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 23`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 24`] = `31.4`;

exports[`Syntaxes are allowed in the chapter they are introduced 25`] = `
"
    !false === (1 !== 2) && 1 < 2 && 1 <= 2 && 2 >= 1 && 2 > 1 || false;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 26`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 27`] = `true`;

exports[`Syntaxes are allowed in the chapter they are introduced 28`] = `
"
    null;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 29`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 30`] = `null`;

exports[`Syntaxes are allowed in the chapter they are introduced 31`] = `
"
    pair(1, null);
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 32`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 33`] = `
Array [
  1,
  null,
]
`;

exports[`Syntaxes are allowed in the chapter they are introduced 34`] = `
"
    list(1);
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 35`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 36`] = `
Array [
  1,
  null,
]
`;

exports[`Syntaxes are allowed in the chapter they are introduced 37`] = `
"
    let i = 1;
    while (i < 5) {
      i = i + 1;
    }
    i;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 38`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 39`] = `5`;

exports[`Syntaxes are allowed in the chapter they are introduced 40`] = `
"
    let i = 1;
    for (i = 1; i < 5; i = i + 1) {
    }
    i;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 41`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 42`] = `5`;

exports[`Syntaxes are allowed in the chapter they are introduced 43`] = `
"
    let i = 1;
    for (let j = 0; j < 5; j = j + 1) {
      if (j < 1) {
        continue;
      } else {
        i = i + 1;
        if (j > 2) {
          break;
        } else {
        }
      }
    }
    i;
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 44`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 45`] = `4`;

exports[`Syntaxes are allowed in the chapter they are introduced 46`] = `
"
    [];
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 47`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 48`] = `Array []`;

exports[`Syntaxes are allowed in the chapter they are introduced 49`] = `
"
    [1, 2, 3];
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 50`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 51`] = `
Array [
  1,
  2,
  3,
]
`;

exports[`Syntaxes are allowed in the chapter they are introduced 52`] = `
"
    [1, 2, 3][1];
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 53`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 54`] = `2`;

exports[`Syntaxes are allowed in the chapter they are introduced 55`] = `
"
    ({});
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 56`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 57`] = `Object {}`;

exports[`Syntaxes are allowed in the chapter they are introduced 58`] = `
"
    ({a: 1, b: 2});
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 59`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 60`] = `
Object {
  "a": 1,
  "b": 2,
}
`;

exports[`Syntaxes are allowed in the chapter they are introduced 61`] = `
"
    ({a: 1, b: 2})['a'];
  "
`;

exports[`Syntaxes are allowed in the chapter they are introduced 62`] = `""`;

exports[`Syntaxes are allowed in the chapter they are introduced 63`] = `1`;
